test/typechecker.d/valid/data2.surc
module data1 where
	troot: Boots
	fabs: Boots

def enum Boots = { troot fabs }
