test/typechecker.d/invalid/typedef-enum-0.surc
def enum Number = { one two three }

x: Integer = one
